--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,18 +21,27 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+}
+    android {
+        compileSdkVersion 34
 
-    defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.learningparkeducation"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 23
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
+        defaultConfig {
+            applicationId "com.example.learningparkeducation"
+            minSdkVersion 23
+            targetSdkVersion 33
+            versionCode 1
+            versionName "1.0"
+        }
+//    defaultConfig {
+//        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+//        applicationId = "com.example.learningparkeducation"
+//        // You can update the following values to match your application needs.
+//        // For more information, see: https://flutter.dev/to/review-gradle-config.
+//        minSdk = flutter.minSdkVersion
+//        targetSdk = flutter.targetSdkVersion
+//        versionCode = flutter.versionCode
+//        versionName = flutter.versionName
+//    }
 
     buildTypes {
         release {
@@ -49,7 +58,7 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
-
+    implementation("com.google.firebase:firebase-auth")
     // TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
