--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -3,5 +3,6 @@
          the Flutter tool needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
+<!--    <uses-sdk tools:overrideLibrary="io.github.ponnamkarthik.toast.fluttertoast"/>-->
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
