--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.3.1
   firebase_auth: ^5.1.4
   flutter_firebase_recaptcha: ^1.0.2
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
