--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.1.4
   flutter_firebase_recaptcha: ^1.0.2
   cloud_firestore: ^5.2.1
+  firebase_database: ^11.0.4
 
 dev_dependencies:
   flutter_test:
