--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_firebase_recaptcha: ^1.0.2
   cloud_firestore: ^5.2.1
   firebase_database: ^11.0.4
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
