--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^5.2.1
   firebase_database: ^11.0.4
   google_fonts: ^6.2.1
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
