--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_database: ^11.0.4
   google_fonts: ^6.2.1
   firebase_storage: ^12.1.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
