--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^12.1.3
   image_picker: ^1.1.2
   url_launcher: ^6.3.0
+  google_generative_ai: ^0.4.5
 
 dev_dependencies:
   flutter_test:
